refactor: - logs debugger