@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
@@ -24,11 +25,14 @@ public class UserAttributeExtractorService {
     @Autowired
     private SecurityProperties securityProperties;
 
+    @Value("${keycloak.target-realm}")
+    private String targetRealm;
+
 
     public void extractCpfFomAllUses() {
         log.info("Inciando a extração de cpf de todos os users...");
 
-        keycloak.realm(securityProperties.getRealm())
+        keycloak.realm(targetRealm)
                 .users()
                 .list()
                 .stream()
@@ -40,17 +44,17 @@ public class UserAttributeExtractorService {
     public boolean extractAndSetCPF(String username) {
         log.info("Extrando cpf do user: {}", username);
 
-        UserRepresentation user = keycloak.realm(securityProperties.getRealm())
+        UserRepresentation user = keycloak.realm(targetRealm)
                 .users()
                 .search(username)
                 .stream()
                 .findFirst()
                 .orElseThrow(() -> new IllegalArgumentException("User não encontrado: " + username));
 
-       return extractCpf(user);
+       return extractCpfFromDescription(user);
     }
 
-    private boolean extractCpf(UserRepresentation user) {
+    private boolean extractCpfFromDescription(UserRepresentation user) {
         try {
             Map<String, List<String>> attributes = user.getAttributes();
 
@@ -77,20 +81,48 @@ public class UserAttributeExtractorService {
                 return false;
             }
 
-            String cpf = extractCpf(description);
+            String cpf = extractCpfFromDescription(description);
 
             if (cpf != null) {
-                attributes.put("cpf", List.of(cpf));
-                log.info("Cpf extraido para {}: {}", user.getUsername(), cpf);
+                log.info("╔════════════════════════════════════════╗");
+                log.info("║      SALVANDO CPF NO KEYCLOAK          ║");
+                log.info("╚════════════════════════════════════════╝");
+                log.info("Usuário: {}", user.getUsername());
+                log.info("CPF extraído: {}", cpf);
+                log.info("Description: {}", description);
+
+                // Adicionar CPF aos atributos
+                attributes.put("cpf", Arrays.asList(cpf));
                 user.setAttributes(attributes);
-                keycloak.realm(securityProperties.getRealm())
+
+                log.info("[1/2] Atualizando usuário no Keycloak...");
+
+                keycloak.realm(targetRealm)
                         .users()
                         .get(user.getId())
                         .update(user);
+                log.info("[2/2] Verificando se foi salvo...");
 
-                return true;
+                // Verificar se foi salvo
+                UserRepresentation userVerificado = keycloak.realm(targetRealm)
+                        .users()
+                        .get(user.getId())
+                        .toRepresentation();
+
+                if (userVerificado.getAttributes() != null
+                        && userVerificado.getAttributes().containsKey("cpf")
+                        && !userVerificado.getAttributes().get("cpf").isEmpty()) {
+                    String cpfSalvo = userVerificado.getAttributes().get("cpf").get(0);
+                    log.info("✓✓✓ CONFIRMADO: CPF salvo com sucesso: {}", cpfSalvo);
+                    return true;
+                } else {
+                    log.error("❌ ERRO: CPF não foi salvo no Keycloak!");
+                    log.error("Atributos após update: {}", userVerificado.getAttributes());
+                    return false;
+                }
             } else {
                 log.warn("Não foi possível extrair CPF da description do usuário {}", user.getUsername());
+                log.warn("Description: {}", description);
                 return false;
             }
         } catch (Exception e) {
@@ -100,22 +132,24 @@ public class UserAttributeExtractorService {
 
     }
 
-    private String extractCpf(String description) {
+    private String extractCpfFromDescription(String description) {
         Pattern pattern = Pattern.compile("CPF:([\\d\\.\\-]+)");
         Matcher matcher = pattern.matcher(description);
 
         if (matcher.find()) {
-            String cpfFormatade = matcher.group(1);
-            String cpfOnyNumbers = cpfFormatade.replaceAll("\\D", "");
+            String cpfFormatado = matcher.group(1);
+            String cpfApenasNumeros = cpfFormatado.replaceAll("\\D", "");
 
-            if (cpfOnyNumbers.length() == 11) {
-                return matcher.group(1).replaceAll("\\D", "");
+            if (cpfApenasNumeros.length() == 11) {
+                log.info("✓ CPF extraído: {} → {}", cpfFormatado, cpfApenasNumeros);
+                return cpfApenasNumeros;
             } else {
-                log.warn("Cpf {} possui tamanho inválido: {}", cpfOnyNumbers, cpfOnyNumbers.length());
+                log.warn("Cpf {} possui tamanho inválido: {}", cpfApenasNumeros, cpfApenasNumeros.length());
                 return null;
             }
         }
 
+        log.warn("⚠ Padrão 'CPF:XXX.XXX.XXX-XX' não encontrado na description");
         return null;
     }
 }
